Fix floor text color on dark mode

--- a/app/components/MazemapEmbed/MazemapEmbed.css
+++ b/app/components/MazemapEmbed/MazemapEmbed.css
@@ -9,3 +9,7 @@
   width: 100%;
   transform: translate(-50%, -50%);
 }
+
+.mazemapEmbed {
+  --lego-font-color: var(--color-absolute-black);
+}
